--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
       <pre>$ git clone git://github.com/jeru/MenuBarTimer</pre>
     </p>
 
+    <h2>Screenshots</h2>
+    <p><img src="images/Feature01.jpg"></p>
+    <p><img src="images/Feature02.jpg"></p>
+    <p><img src="images/Feature03.jpg"></p>
+    <p><img src="images/Feature04.jpg"></p>
+    <p><img src="images/Feature05.jpg"></p>
+
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/jeru/MenuBarTimer">jeru/MenuBarTimer</a>
     </div>
