--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #2f1fda;
+      background-color: #ffffff;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
+      color: #000000;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #d0e025; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #010101; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #d0e025; }
-    h3 { text-align: center; color: #d0e025; }
-    a { color: #d0e025; }
+    h2 { font-size: 1.5em; color: #010101; }
+    h3 { text-align: center; color: #010101; }
+    a { color: #010101; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
