Remove the misleading .zip and .tar downloads high above the page.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 
   <div id="container">
 
+	  <!--
     <div class="download">
       <a href="http://github.com/jeru/MenuBarTimer/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/jeru/MenuBarTimer/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
+    	-->
 
     <h1><a href="http://github.com/jeru/MenuBarTimer">MenuBarTimer</a>
       <span class="small">by <a href="http://github.com/jeru">jeru</a></span></h1>
@@ -50,7 +52,8 @@
     </div>
 
     <p>I made MenuBarTimer simply because I think a timer that appears as an isolated window is too heavy-weighted. I just want the timers reside on the status bar, without their own menu or docking icon, just like "Time-applet" in Gnome Desktop.</p><h2>Install</h2>
-<p>Just check it out, open with Xcode, compile it, then enjoy it.</p>
+<p>Option 1: from source code. Just check it out, open with Xcode, compile it, then enjoy it.</p>
+<p>Option 2: from binary bundle. Download the binary in .zip form, decompress it, and put it somewhere.</p>
 <h2>License</h2>
 <p>BSD license.</p>
 <h2>Authors</h2>
@@ -61,7 +64,11 @@
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
+    You can download the binary bundle of this project in
+    <a href="https://github.com/downloads/jeru/MenuBarTimer/MenuBarTimer-v0.2.zip">zip</a> format.
+    </p>
+    <p>
+      You can download the source code of this project in either
       <a href="http://github.com/jeru/MenuBarTimer/zipball/master">zip</a> or
       <a href="http://github.com/jeru/MenuBarTimer/tarball/master">tar</a> formats.
     </p>
