--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <span class="small">by <a href="http://github.com/jeru">jeru</a></span></h1>
 
     <div class="description">
-      Timers that appear without window, menu or docking icons. Just on the system status bar.
+      Timers without window, menu or docking icons. Just on the system status bar.
     </div>
 
     <p>I made MenuBarTimer simply because I think a timer that appears as an isolated window is too heavy-weighted. I just want the timers reside on the status bar, without their own menu or docking icon, just like "Time-applet" in Gnome Desktop.</p><h2>Install</h2>
